fixed weird clipping issue

--- a/src/components/Chat/Users/Users.css
+++ b/src/components/Chat/Users/Users.css
@@ -8,7 +8,6 @@
   width: 100%;
   place-self: center;
   align-items: center;
-  position: relative;
 }
 
 .user-container-dark {
